2001-10-11  Dave Love  <fx@gnu.org>

	* emacs-lisp/byte-opt.el (byte-optimize-lapcode)
	<byte-constref-ops>: Consider byte-constant2 and clarify the code.
	<const-C varset-X const-C>: Fix car/cdr typo.

2001-10-11  Gerd Moellmann  <gerd@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-display-log-head-p): New
	function extracted from byte-compile-log-1.
	(byte-compile-log-1): Change output to be more in line with 
	the output of other GNU tools.
	(byte-compile-warn): Emit `warning' instead of `**' for warnings.
	(byte-compile-report-error): Downcase error message.  Use 
	`error' instead of `!!' for error messages.
	(byte-compile-print-syms): Treat non-interactive case specially.
	(displaying-byte-compile-warnings): Use backquote.
	(byte-compile-from-buffer): Bind byte-compile-last-line.
	(batch-byte-compile): Remove `Done' message.

2001-10-10  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/copyright.el (copyright): Add final \n.

2001-10-11  Miles Bader  <miles@gnu.org>

	* diff.el (diff): Display default values in prompts as
	`(default ...)', not `(...)'.
	* info.el (Info-follow-reference): Likewise.

2001-10-10  Stefan Monnier  <monnier@cs.yale.edu>

	* emacs-lisp/autoload.el (doc-string-elt): Remove.

	* newcomment.el (comment-indent): Be a little more robust in case
	comment-indent-function does funny things.
	(comment-normalize-vars): Autoload.
	(comment-region-internal): Fiddle with the visibility spec.
	(comment-valid-prefix): New function.
	(comment-indent-new-line): Use it.  Ignore adaptive-fill-prefixes
	that would turn comment-text into non-comment-text.

	* emacs-lisp/syntax.el: New file.

	* progmodes/tcl.el: Change maintainer to FSF and remove loads of
	compatibility cruft.
	(tcl-using-emacs-19, tcl-using-emacs-19-23, tcl-using-xemacs-19)
	(tcl-version, tcl-maintainer, tcl-use-hairy-comment-detector): Remove.
	(tcl-mode-map): Remove bindings for tcl-beginning-of-defun,
	tcl-end-of-defun, tcl-mark-defun, tcl-indent-for-comment,